[package]
name = "HotKeyManager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
simple_logger = "5.0.0"
toml = "0.8.19"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
] }
windows-hotkeys = "0.2.1"
